# cw721_receiving_messages

./: .gitignore  Cargo.toml  README.md  environment.js  execute  malaga.env  q_config.json  q_tokens.json  query
.e/: exec.json  run.js
.q/: query.json  run.js
contracts/: Cargo.toml  download.wasm  init_contract.json  mint.json  q_config.json
contracts/cw721-base/: Cargo.toml
contracts/cw721-base/src/: helpers.rs  lib.rs  metadata.rs  tests.rs
contracts/cw721-visa/: Cargo.toml
contracts/cw721-visa/examples/: schema-cw721-visa.rs
contracts/cw721-visa/schema/: cw721-visa.json
contracts/cw721-visa/src/: contract.rs  lib.rs  metadata.rs  msg.rs  state.rs  tests.rs
contracts/portal/: Cargo.toml
contracts/portal/schema/: execute_msg.json  query_msg.json
contracts/portal/src/: contract.rs  error.rs  execute_fns.rs  lib.rs  msg.rs  query_fns.rs  state.rs  tests.rs
contracts/src/: contract_tests.rs  execute.rs  msg.rs  query.rs  state.rs
contracts/src/spec/: traits.rs
course-02-cw721/: description.md
course-02-cw721/lesson-01_cw721-base_contract-structure/: description.md
course-02-cw721/lesson-01_cw721-base_contract-structure/exercise-04/: exercise.md
course-02-cw721/lesson-01_cw721-base_contract-structure/exercise-07/: exercise.md
course-02-cw721/lesson-01_cw721-base_contract-structure/exercise-08/: exercise.md
course-02-cw721/lesson-01_cw721-basics/: description.md  exercise-01-help.md  exercise-01.md  summary.md
course-02-cw721/lesson-01_cw721-basics/exercise-01/: exercise-01.md
course-02-cw721/lesson-01_cw721-basics/exercise-02/: exercise.md
course-02-cw721/lesson-01_cw721-basics/exercise-04/: query(ContractInfoResponse)-support.md
course-02-cw721/lesson-01_cw721-basics/exercise-06/: cw-utils(Expiration).md  exercise.md
course-02-cw721/lesson-01_cw721-basics/exercise-07/: approval-support.md  help.md
course-02-cw721/lesson-01_cw721-basics/exercise-??-rust-lifetimes/: exercise-02.md  help.md
course-02-cw721/lesson-01_cw721-contract-structure/exercise-03/: exercise.md
course-02-cw721/lesson-01_cw721-contract-structure/exercise-04/: exercise.md
course-02-cw721/lesson-01_cw721-contract-structure/exercise-05/: exercise.md
course-02-cw721/lesson-01_cw721-contract-structure/exercise-07/: exercise.md
course-02-cw721/lesson-02_cw721-base_instantiate-mint/: description.md  summary.md
course-02-cw721/lesson-02_cw721-base_instantiate-mint/exercise-02/: exercise.md  help.md
course-02-cw721/lesson-02_cw721-base_instantiate-mint/exercise-03/: help.md
course-02-cw721/lesson-02_cw721-base_instantiate-mint/exercise-04/: exercise.md
course-02-cw721/lesson-02_cw721-base_instantiate-mint/exercise-05/: exercise.md
course-02-cw721/lesson-02_cw721-base_instantiate-mint/exercise-06/: exercise.md
course-02-cw721/lesson-02_cw721-base_instantiate-mint/exercise-07/: exercise.md
course-02-cw721/lesson-02_cw721-base_instantiate-mint/exercise-08/: exercise.md
course-02-cw721/lesson-02_instantiate-mint/: description.md
course-02-cw721/lesson-02_instantiate-mint/exercise-01/: exercise.md  state-support.md
course-02-cw721/lesson-02_instantiate-mint/exercise-03/: exercise.md
course-02-cw721/lesson-03_cw721-visa/: description.md  summary.md
course-02-cw721/lesson-03_cw721-visa/support/: help-1.md  (+3 more)
course-02-cw721/lesson-04-portal-receive-nft/: description.md
course-02-cw721/lesson-04-send_nft-cw721receive/: description.md  summary.md
course-02-cw721/lesson-05-portal-receive-nft/: summary.md
course-02-cw721/support-files/: cosmwasm-scheme-lib.rs-support.md  cosmwasm-std-addresses.rs-support.md  cosmwasm-std-coin.rs-support.md  cosmwasm-std-cosmos_msg.rs-support.md  cosmwasm-std-query.rs-support.md  cosmwasm-std-traits.rs-support.md  cw-2-lib.rs-support.md  cw-storage-plus-map.rs-support.md  cw-utils-experation.rs-support.md  cw721-base-error.rs-support.md  cw721-base-execute.rs-support.md  cw721-base-msg.rs-support.md  cw721-base-state.rs-support.md  cw721-query.rs-support.md  cw721-reciever.rs-support.md  experation-support.md  opensea-metadata-standards.rs-support.md  portal-error.rs-support.md  portal-msg.rs-support.md  portal-state.rs-support.md  universe-species.rs-support.md
frontend/: MalagaInfo.ts  package-lock.json  package.json
frontend/src/: App.module.css  App.tsx
(+33 files in other folders)
