[package]
name          = "cw721-visa"
description   = "Example extending CW721 NFT to store metadata on chain"
authors       = [
  "Ethan Frey <ethanfrey@users.noreply.github.com>",
  "Orkun Külçe <orkun@deuslabs.fi>",
]
version       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[[bin]]
name = "cw721-visa"
path = "examples/schema-cw721-visa.rs"

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw2             = { workspace = true }
cw721           = { workspace = true }
cw721-base      = { workspace = true, features = ["library"] }
cw-storage-plus = { workspace = true }
schemars        = { workspace = true }
serde           = { workspace = true }
thiserror       = { workspace = true }
universe        = { workspace = true }
