[package]
name = "portal"
version       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = "1.0.0-beta"
cosmwasm-storage = "1.0.0-beta"
schemars = "0.8"
thiserror = "1.0.23"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
universe = { workspace = true }
cw721-base = {workspace = true}

[dev-dependencies]
cosmwasm-vm = "1.0.0-beta"
cosmwasm-schema = "1.0.0-beta"
